minor updates on tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,12 @@
 set -g default-terminal "screen-256color"
+
+# set -g prefix C-b
+# unbind C-b
+# bind-key C-b send-prefix
+
 set -g mouse on
+set -g status-bg '#000000'
+# set -g status-left '#[fg=colour33,bg=colour135] #W '
 set-window-option -g mode-keys vi
 
 set-option -sg escape-time 100
@@ -16,21 +23,19 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind -r j resize-pane -D 3
+bind -r k resize-pane -U 3
+bind -r l resize-pane -R 3
+bind -r h resize-pane -L 3
 bind -r m resize-pane -Z
-bind -r C-p switch-client -l
-bind -r C-k copy-mode
 
 bind-key P paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-# bind-key -T copy-mode-vi 'y' send -X copy-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+bind -r C-p switch-client -l
 bind C-f run-shell "tmux neww tmux-sessionizer.sh"
 
 set -g @override_copy_command 'xclip -sel clipboard'
