--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-terminal "screen-256color"
 
-# set -g prefix C-b
-# unbind C-b
-# bind-key C-b send-prefix
+set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
 
 set -g mouse on
 set -g status-bg '#000000'
@@ -32,11 +32,13 @@ bind -r m resize-pane -Z
 bind-key P paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
-
 unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key v copy-mode
 
-bind -r C-p switch-client -l
-bind C-f run-shell "tmux neww tmux-sessionizer.sh"
+bind-key e switch-client -l
+bind-key b run-shell "tmux neww tmux-sessionizer.sh"
+bind-key C-e switch-client -l
+bind-key C-f run-shell "tmux neww tmux-sessionizer.sh"
 
 set -g @override_copy_command 'xclip -sel clipboard'
 
