expand tmux session switch keymap for experimentation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,8 @@
+set-option -g default-command "/bin/zsh"
+
 set -g default-terminal "screen-256color"
+
+set-option -g update-environment "PATH"
 
 set -g prefix C-a
 unbind C-b
@@ -35,9 +39,11 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key v copy-mode
 
-bind-key e switch-client -l
-bind-key b run-shell "tmux neww tmux-sessionizer.sh"
+bind-key u switch-client -l
+bind-key C-u switch-client -l
 bind-key C-e switch-client -l
+bind-key b run-shell "tmux neww tmux-sessionizer.sh"
+bind-key C-d run-shell "tmux neww tmux-sessionizer.sh"
 bind-key C-f run-shell "tmux neww tmux-sessionizer.sh"
 
 set -g @override_copy_command 'xclip -sel clipboard'
