simplify sessionizer keymap

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,11 +40,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key v copy-mode
 
 bind-key u switch-client -l
-bind-key C-u switch-client -l
-bind-key C-e switch-client -l
-bind-key b run-shell "tmux neww tmux-sessionizer.sh"
-bind-key C-d run-shell "tmux neww tmux-sessionizer.sh"
-bind-key C-f run-shell "tmux neww tmux-sessionizer.sh"
+bind-key f run-shell "tmux neww tmux-sessionizer.sh"
 
 set -g @override_copy_command 'xclip -sel clipboard'
 
