update tmux status bar color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,10 @@ unbind C-b
 bind-key C-a send-prefix
 
 set -g mouse on
-set -g status-bg '#000000'
-# set -g status-left '#[fg=colour33,bg=colour135] #W '
+set -g status-bg '#000909'
+# set -g status-style bg=default
+# # set -g status-fg '#999999'
+# set -g status-left '#[fg=colour33,bg=colour235] #W '
 set-window-option -g mode-keys vi
 
 set-option -sg escape-time 100
